Doctor Appointments and registration changes

--- a/DermaCare/DermaCare/Base.lproj/Main.storyboard
+++ b/DermaCare/DermaCare/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <!--Appointments-->
         <scene sceneID="orV-Y9-JqS">
             <objects>
-                <viewController id="pmA-ws-E4D" sceneMemberID="viewController">
+                <viewController id="pmA-ws-E4D" customClass="DoctorViewAppointmentController" customModule="DermaCare" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Mwt-K3-0cd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -24,29 +24,60 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="w90-8v-x3c">
-                                <rect key="frame" x="0.0" y="77" width="375" height="590"/>
+                                <rect key="frame" x="0.0" y="112" width="375" height="555"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KK7-RZ-XGd">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DocAppointmentTableViewCell" rowHeight="80" id="KK7-RZ-XGd" customClass="DocAppointmentTableViewCell" customModule="DermaCare" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KK7-RZ-XGd" id="EOe-4e-g1N">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sd4-Is-1dM">
+                                                    <rect key="frame" x="34" y="11" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkX-xv-zKk">
+                                                    <rect key="frame" x="34" y="40" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="appmtDate" destination="dkX-xv-zKk" id="f0Q-DB-MGa"/>
+                                            <outlet property="patientName" destination="Sd4-Is-1dM" id="ePP-W3-Q4h"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fZB-95-uui">
+                                <rect key="frame" x="16" y="83" width="343" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="bGO-XW-Ix6"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Appointments" image="DoctorTab" id="xtI-3I-HYj"/>
+                    <connections>
+                        <outlet property="docAppointmentTableView" destination="w90-8v-x3c" id="cek-89-dZ1"/>
+                        <outlet property="numAppmtLabel" destination="fZB-95-uui" id="m7Q-dp-4XY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SbT-Ga-N0U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2455" y="1184"/>
+            <point key="canvasLocation" x="-4402" y="1496"/>
         </scene>
         <!--Profile-->
         <scene sceneID="9k9-L0-JKW">
@@ -172,7 +203,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0ZE-b6-9cC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2455.1999999999998" y="416.94152923538235"/>
+            <point key="canvasLocation" x="-4666" y="476"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="n1j-j8-qMB">
@@ -190,12 +221,12 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XH3-5K-Uaj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3404" y="750"/>
+            <point key="canvasLocation" x="-1818" y="1542"/>
         </scene>
-        <!--View Controller-->
+        <!--Doctor Register Details Controller-->
         <scene sceneID="WOH-37-Cov">
             <objects>
-                <viewController id="0xb-0b-CQ7" sceneMemberID="viewController">
+                <viewController id="0xb-0b-CQ7" customClass="DoctorRegisterDetailsController" customModule="DermaCare" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QK0-Ur-caq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -231,6 +262,16 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WSc-SV-ybn">
+                                <rect key="frame" x="16" y="542" width="343" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.9861351612" green="0.9896013709" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="SUBMIT"/>
+                                <connections>
+                                    <action selector="btnSubmit:" destination="0xb-0b-CQ7" eventType="touchUpInside" id="kiA-rk-fRk"/>
+                                    <segue destination="wfH-fM-jHj" kind="show" identifier="docDashboardSegue" id="L1X-sL-efT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -241,6 +282,12 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="IeL-Kj-pHD"/>
                     </view>
+                    <connections>
+                        <outlet property="consultationFeeTxtField" destination="5Gi-r9-45x" id="8ff-op-Ma3"/>
+                        <outlet property="expTxtField" destination="tOx-S1-Kbx" id="Wo4-W6-azg"/>
+                        <outlet property="hoursTxtField" destination="rB5-pp-orn" id="8Vl-xd-TmY"/>
+                        <outlet property="specTxtField" destination="dfa-8y-tRb" id="1XH-CF-Eqr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bb3-lt-6gl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -461,7 +508,6 @@
                                         </state>
                                         <connections>
                                             <action selector="registerAction:" destination="mmG-HG-xTJ" eventType="touchUpInside" id="S9g-hm-qbp"/>
-                                            <segue destination="YHd-Wt-BOI" kind="show" identifier="loginSegue" id="BgS-Ry-8OG"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register as a " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qgy-hg-ib6">
@@ -565,6 +611,8 @@
                         <outlet property="phoneNo" destination="Ldi-UJ-f5p" id="jd6-aC-17l"/>
                         <outlet property="usernameText" destination="Gvs-xo-MDy" id="K2a-3R-0Og"/>
                         <outlet property="verifyText" destination="vaL-OC-TPd" id="aIy-TR-eNl"/>
+                        <segue destination="YHd-Wt-BOI" kind="show" identifier="patientDashboardSegue" id="Zhf-0T-Khf"/>
+                        <segue destination="0xb-0b-CQ7" kind="show" identifier="docRegisterDetailsSegue" id="eFH-Ag-osX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fPl-xl-5h1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -702,7 +750,8 @@
                     <connections>
                         <outlet property="emailText" destination="d3T-wz-2Km" id="xo9-Uq-3fh"/>
                         <outlet property="passwordtext" destination="F5n-aS-u5D" id="ax8-HM-qMK"/>
-                        <segue destination="YHd-Wt-BOI" kind="show" identifier="loginSegue" id="4tj-LD-od0"/>
+                        <segue destination="YHd-Wt-BOI" kind="show" identifier="patientLoginSegue" id="4tj-LD-od0"/>
+                        <segue destination="wfH-fM-jHj" kind="show" identifier="doctorLoginSegue" id="dT6-2K-vig"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9FR-7B-WmH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2355,12 +2404,13 @@
         <image name="send button" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="H9p-aC-Wi9"/>
+        <segue reference="4tj-LD-od0"/>
         <segue reference="Opu-1A-u79"/>
         <segue reference="Qi6-lm-eUS"/>
         <segue reference="02c-VV-vhf"/>
         <segue reference="zZD-cK-02k"/>
-        <segue reference="8XC-6Q-Gd5"/>
-        <segue reference="YhO-YA-AQd"/>
+        <segue reference="eTO-tO-0YP"/>
+        <segue reference="Z78-Pj-ZhC"/>
+        <segue reference="dT6-2K-vig"/>
     </inferredMetricsTieBreakers>
 </document>
