--- a/DermaCare/DermaCare/Base.lproj/Main.storyboard
+++ b/DermaCare/DermaCare/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -28,22 +28,29 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DocAppointmentTableViewCell" rowHeight="80" id="KK7-RZ-XGd" customClass="DocAppointmentTableViewCell" customModule="DermaCare" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DocAppointmentTableViewCell" rowHeight="134" id="KK7-RZ-XGd" customClass="DocAppointmentTableViewCell" customModule="DermaCare" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="134"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KK7-RZ-XGd" id="EOe-4e-g1N">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="133.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sd4-Is-1dM">
-                                                    <rect key="frame" x="34" y="11" width="42" height="21"/>
+                                                    <rect key="frame" x="34" y="11" width="168" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkX-xv-zKk">
-                                                    <rect key="frame" x="34" y="40" width="42" height="21"/>
+                                                    <rect key="frame" x="34" y="52" width="168" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TYf-wj-Xb0" userLabel="phone">
+                                                    <rect key="frame" x="34" y="91" width="168" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -54,6 +61,7 @@
                                         <connections>
                                             <outlet property="appmtDate" destination="dkX-xv-zKk" id="f0Q-DB-MGa"/>
                                             <outlet property="patientName" destination="Sd4-Is-1dM" id="ePP-W3-Q4h"/>
+                                            <outlet property="patientPhone" destination="TYf-wj-Xb0" id="Zpl-Bm-QnQ"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -77,22 +85,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SbT-Ga-N0U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4402" y="1496"/>
+            <point key="canvasLocation" x="-1476" y="1217"/>
         </scene>
         <!--Profile-->
         <scene sceneID="9k9-L0-JKW">
             <objects>
-                <viewController id="wj6-yD-qdI" sceneMemberID="viewController">
+                <viewController id="wj6-yD-qdI" customClass="DoctorAccountController" customModule="DermaCare" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gb7-di-dNR">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="docProfile" translatesAutoresizingMaskIntoConstraints="NO" id="Wh4-Ez-WbC">
-                                <rect key="frame" x="6" y="3" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="3" width="381" height="690"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZw-Hr-LO0">
-                                <rect key="frame" x="79" y="268" width="71" height="21"/>
+                                <rect key="frame" x="79" y="268" width="103" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.081000365320000003" green="0.76635944840000003" blue="0.75223958489999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -109,6 +117,9 @@
                                 <state key="normal" title="Save">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnSavePhoto:" destination="wj6-yD-qdI" eventType="touchUpInside" id="zb0-f1-BdO"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vvg-Lh-cDg">
                                 <rect key="frame" x="40" y="117" width="75" height="22"/>
@@ -117,6 +128,9 @@
                                 <state key="normal" title="Add/Change Photo">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnAddPhoto:" destination="wj6-yD-qdI" eventType="touchUpInside" id="ea4-8r-366"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hours" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ir6-0X-KLl">
                                 <rect key="frame" x="79" y="206" width="32" height="14"/>
@@ -126,14 +140,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YjS-YL-Hsh">
-                                <rect key="frame" x="79" y="177" width="71" height="21"/>
+                                <rect key="frame" x="79" y="177" width="103" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.081000365320000003" green="0.76635944840000003" blue="0.75223958489999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p73-nd-60S">
-                                <rect key="frame" x="283" y="177" width="71" height="21"/>
+                                <rect key="frame" x="283" y="177" width="76" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.081000365320000003" green="0.76635944840000003" blue="0.75223958489999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -187,9 +201,13 @@
                                 <state key="normal" title="Log Out">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnLogout:" destination="wj6-yD-qdI" eventType="touchUpInside" id="D59-Ps-NzP"/>
+                                    <segue destination="Kmd-Rg-Zf0" kind="show" identifier="docLogoutSegue" id="jPz-ME-roe"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bwx-4R-g0Q">
-                                <rect key="frame" x="283" y="268" width="71" height="21"/>
+                                <rect key="frame" x="283" y="268" width="76" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.081000365320000003" green="0.76635944840000003" blue="0.75223958489999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -200,10 +218,20 @@
                         <viewLayoutGuide key="safeArea" id="Jca-Hd-C1j"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="MyAccountTab" id="qBl-KU-Caw"/>
+                    <connections>
+                        <outlet property="docAgeLabel" destination="DOl-df-c5D" id="Stj-tS-LnL"/>
+                        <outlet property="docGenderLabel" destination="uYG-eu-7Er" id="OD4-LG-4wE"/>
+                        <outlet property="docNameLabel" destination="Vxs-pp-9m9" id="z33-gd-Q1g"/>
+                        <outlet property="experienceLabel" destination="CZw-Hr-LO0" id="tjx-hs-nKj"/>
+                        <outlet property="feesLabel" destination="p73-nd-60S" id="NiL-2S-3lH"/>
+                        <outlet property="hoursLabel" destination="YjS-YL-Hsh" id="V1G-Ic-yX8"/>
+                        <outlet property="profileImage" destination="Vdr-qq-u90" id="0WO-gI-ur4"/>
+                        <outlet property="specialityLabel" destination="bwx-4R-g0Q" id="W0E-Pa-Tmf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0ZE-b6-9cC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4666" y="476"/>
+            <point key="canvasLocation" x="349.60000000000002" y="-457.42128935532236"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="n1j-j8-qMB">
@@ -221,7 +249,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XH3-5K-Uaj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1818" y="1542"/>
+            <point key="canvasLocation" x="-1599" y="-118"/>
         </scene>
         <!--Doctor Register Details Controller-->
         <scene sceneID="WOH-37-Cov">
@@ -291,7 +319,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bb3-lt-6gl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1666.4000000000001" y="754.27286356821594"/>
+            <point key="canvasLocation" x="-2257" y="663"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -2667,13 +2695,12 @@
         <image name="send button" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="F6Z-av-jLr"/>
-        <segue reference="iN7-lg-BkO"/>
+        <segue reference="H9p-aC-Wi9"/>
         <segue reference="X9a-zf-FjO"/>
-        <segue reference="02c-VV-vhf"/>
-        <segue reference="zZD-cK-02k"/>
-        <segue reference="eTO-tO-0YP"/>
+        <segue reference="p7b-0U-PuQ"/>
+        <segue reference="71F-fe-3Jg"/>
+        <segue reference="8XC-6Q-Gd5"/>
         <segue reference="Z78-Pj-ZhC"/>
-        <segue reference="dT6-2K-vig"/>
+        <segue reference="L1X-sL-efT"/>
     </inferredMetricsTieBreakers>
 </document>
