--- a/DermaCare/DermaCare/Base.lproj/Main.storyboard
+++ b/DermaCare/DermaCare/Base.lproj/Main.storyboard
@@ -825,13 +825,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search dermatologists near you" translatesAutoresizingMaskIntoConstraints="NO" id="OqD-be-8UO">
-                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4rP-J2-oXc">
-                                <rect key="frame" x="0.0" y="120" width="375" height="498"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -974,7 +969,6 @@
                                     <color key="titleColor" red="0.95401009790000002" green="0.96345574239999998" blue="0.96345574239999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="bookAppointment:" destination="Wwx-IH-PH2" eventType="touchUpInside" id="jP4-Ls-SUg"/>
                                     <segue destination="XkZ-nx-CTw" kind="show" identifier="doctor" id="a6Z-ZU-l2V"/>
                                 </connections>
                             </button>
@@ -2281,7 +2275,8 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="FrL-Fd-ui8" kind="show" id="hdB-NO-AiH"/>
+                                    <action selector="finalNextButton:" destination="ass-mp-H45" eventType="touchUpInside" id="uty-Lw-JZ7"/>
+                                    <segue destination="FrL-Fd-ui8" kind="show" identifier="finalresult" id="hdB-NO-AiH"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chat" translatesAutoresizingMaskIntoConstraints="NO" id="NF4-RP-U8F">
@@ -2492,20 +2487,58 @@
             </objects>
             <point key="canvasLocation" x="3981.5999999999999" y="2407.6461769115444"/>
         </scene>
-        <!--Result Controller-->
+        <!--Final Result Controller-->
         <scene sceneID="I3v-Sc-gXy">
             <objects>
-                <viewController id="FrL-Fd-ui8" customClass="ResultController" customModule="DermaCare" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="FrL-Fd-ui8" customClass="FinalResultController" customModule="DermaCare" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FoX-Qg-2Xa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ResultPage" translatesAutoresizingMaskIntoConstraints="NO" id="h10-T6-19i">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eBz-wX-LNZ">
+                                <rect key="frame" x="90" y="581" width="198" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <segue destination="YHd-Wt-BOI" kind="presentation" id="Vli-TU-uLH"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DIAGNOSIS RESULT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sXF-o8-bEZ">
+                                <rect key="frame" x="28" y="36" width="319" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="jVf-OJ-HHI">
+                                <rect key="frame" x="16" y="199" width="343" height="351"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CeK-4X-PQY">
+                                <rect key="frame" x="16" y="117" width="331" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="5SI-vA-mQo"/>
                     </view>
+                    <connections>
+                        <outlet property="resultText" destination="jVf-OJ-HHI" id="OKu-zQ-s7m"/>
+                        <outlet property="username" destination="CeK-4X-PQY" id="Xhk-1i-deL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yj5-nM-vdP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4854" y="2411"/>
+            <point key="canvasLocation" x="4853.6000000000004" y="2410.344827586207"/>
         </scene>
         <!--Scan View Controller-->
         <scene sceneID="bO5-vg-tR0">
@@ -2632,13 +2665,6 @@
                                     <action selector="cameraClicked:" destination="pRx-U2-9bj" eventType="touchUpInside" id="klP-6o-BA1"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E5z-Ii-C6D">
-                                <rect key="frame" x="249" y="504" width="110" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4JJ-Wk-2hZ">
                                 <rect key="frame" x="304" y="39" width="55" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -2670,6 +2696,13 @@
                                 <rect key="frame" x="0.0" y="73" width="375" height="379"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E5z-Ii-C6D">
+                                <rect key="frame" x="16" y="446" width="343" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="p4L-L8-NY6"/>
@@ -2681,7 +2714,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zFL-yv-Nc4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3012" y="2355.472263868066"/>
+            <point key="canvasLocation" x="3013.5999999999999" y="2408.5457271364321"/>
         </scene>
         <!--Result Controller-->
         <scene sceneID="efW-84-9YG">
@@ -2811,6 +2844,7 @@
         <image name="MyAccountTab" width="19" height="25"/>
         <image name="NewDiagnose" width="187" height="406"/>
         <image name="Pharmacy" width="190" height="50"/>
+        <image name="ResultPage" width="187" height="406"/>
         <image name="Screen Shot 2018-04-11 at 2.29.21 PM" width="586" height="698"/>
         <image name="account" width="375" height="726"/>
         <image name="appointments" width="187" height="406"/>
@@ -2827,7 +2861,7 @@
         <image name="send button" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="H9p-aC-Wi9"/>
+        <segue reference="Vli-TU-uLH"/>
         <segue reference="X9a-zf-FjO"/>
         <segue reference="p7b-0U-PuQ"/>
         <segue reference="71F-fe-3Jg"/>
